# jasp-desktop

./: .gitignore  .gitmodules  CMakeLists.txt  JASP.pri
Common/: columnencoder.cpp  filereader.cpp  utils.cpp
CommonData/: CMakeLists.txt  column.cpp  column.h  databaseinterface.cpp  databaseinterface.h  dataset.cpp  dataset.h
Desktop/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
Engine/: CMakeLists.txt  engine.cpp  otoolstuff.cpp  rbridge.cpp
JASP-Common/: JASP-Common.pro  analysis.cpp  analysis.h  column.cpp  column.h  enumutilities.h  ipcchannel.h  utils.cpp
JASP-Desktop/: JASP-Desktop.pri  JASP-Desktop.pro  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  (+9 more)
QMLForm/: CMakeLists.txt  DUP_analysisform.cpp  DUP_analysisform.h  DUP_boundcontrol.h  DUP_boundcontrolbase.cpp  DUP_boundcontrolbase.h  DUP_expanderbuttonbase.cpp  DUP_expanderbuttonbase.h  DUP_jaspcontrol.cpp  DUP_jaspcontrol.h  DUP_jasplistcontrol.cpp  DUP_jasplistcontrol.h  DUP_listmodel.cpp  DUP_listmodel.h  DUP_listmodelassignedinterface.cpp  DUP_listmodelassignedinterface.h  DUP_listmodelavailableinterface.cpp  DUP_listmodelavailableinterface.h  DUP_listmodeldraggable.cpp  DUP_listmodeldraggable.h  DUP_listmodeltermsavailable.cpp  DUP_listmodeltermsavailable.h  DUP_qutils.cpp  DUP_qutils.h  DUP_rowcontrols.cpp  DUP_rowcontrols.h  DUP_sortable.cpp  DUP_sortable.h  DUP_sortmenumodel.cpp  DUP_sortmenumodel.h  DUP_sourceitem.cpp  DUP_sourceitem.h  DUP_term.cpp  DUP_term.h  DUP_terms.cpp  DUP_terms.h  DUP_variableinfo.h  DUP_variableslistbase.cpp  DUP_variableslistbase.h  analysisinterface.h
(+186 files in other folders)
